--- a/home/home.html
+++ b/home/home.html
@@ -181,7 +181,7 @@
     <section class="popular">
         <div class="container">
             <div class="heading">
-                <h2 class="heading__title">Sản phẩm phổ biến</h2>
+                <h2 class="heading__title1">Sản phẩm phổ biến</h2>
                 <p class="heading__desc">
 
                 </p>
